tls/04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
   - hosts:
       - hello-world-secret.sumpfgottheit.casa
     secretName: sumpfgottheit.casa
  rules:
  - host: hello-world-secret.sumpfgottheit.casa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 5678
